polychem/src/atoms/snapshots/polychem__atoms__atomic_database__tests__decimal_from_bool.snap
---
source: polychem/src/atoms/atomic_database.rs
description: res
expression: out
---
  × error parsing KDL

Error:   × expected a decimal number, found boolean
   ╭─[test:1:10]
 1 │ lossless true
   ·          ──┬─
   ·            ╰── unsupported value
   ╰────
