polychem/src/atoms/snapshots/polychem__atoms__atomic_database__tests__three_char_element_symbol.snap
---
source: polychem/src/atoms/atomic_database.rs
description: res
expression: out
---
  × error parsing KDL

Error:   × an error occured during scalar conversion
  ╰─▶   × expected a single uppercase ASCII letter optionally followed by a
        │ lowercase ASCII letter, got "Deu"
      
   ╭─[test:1:1]
 1 │ Deu "Deuterium" {
   · ─┬─
   ·  ╰── invalid value
 2 │   isotope 2 2.01410177812 1
   ╰────

