polychem/src/atoms/snapshots/polychem__atoms__atomic_database__tests__uppercase_particle_symbol.snap
---
source: polychem/src/atoms/atomic_database.rs
description: res
expression: out
---
  × error parsing KDL

Error:   × an error occured during scalar conversion
  ╰─▶   × expected a single lowercase ASCII letter, got "P"
      
   ╭─[test:1:1]
 1 │ P "Proton" {
   · ┬
   · ╰── invalid value
 2 │   mass 1.007276466621
   ╰────

